flower/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower
          image: celery/flower:latest  # Use the appropriate Flower image
          ports:
            - containerPort: 5555  # Flower UI port
