flower/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flower-service
spec:
  selector:
    app: flower
  ports:
  - port: 8008
    protocol: TCP
    targetPort: 8008
