flower/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flower-ingress
spec:
  rules:
    - host: flower.localhost.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flower
                port:
                  number: 5555
